<resources>
    <string name="app_name">Trip Mo Car Rental</string>
    <string name="car_reservation_title">Vehicle Reservation</string>
    <string name="hint_email">Input email address</string>
    <string name="hint_password">Input Password</string>
    <string name="button_login">Login</string>
    <string name="to_sign_up">Don\'t have an account? Sign Up</string>
    <string name="register">Register</string>
    <string name="retype_password">Re-type Password</string>
    <string name="account_type">Type of account to Register?</string>
    <string name="account_borrower">Borrower</string>
    <string name="account_owner">Vehicle Owner</string>
    <string name="button_register">Register</string>
    <string name="to_sign_in">Already Register? Sign In</string>
    <string name="borrower_form">Borrower Registration</string>
    <string name="owner_form">Vehicle Owner Registration</string>
    <string name="personal_info">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="contact_info">Contact Information</string>
    <string name="home_address">Home Address:</string>
    <string name="hint_house_block">House No./Block No.</string>
    <string name="hint_building_subdivision">Building/Subdivision</string>
    <string name="hint_street">Street</string>
    <string name="hint_barangay">Barangay</string>
    <string name="hint_city">City</string>
    <string name="hint_province">Province</string>
    <string name="hint_zipcode">Zip Code</string>
    <string name="contact_number">Contact Number:</string>
    <string name="cellphone_number">Cellphone#</string>
    <string name="telephone_number">Telephone#</string>
    <string name="next">Save &amp; Proceed to Next Process</string>
    <string name="finish">Upload &amp; Complete the Registration</string>
    <string name="license_info">License Information</string>
    <string name="driving_status">Do you have Driver\'s License?</string>
    <string name="license">With Driver\'s License</string>
    <string name="non_license">No Driver\'s License</string>
    <string name="license_detail">Driver\'s License Details</string>
    <string name="license_number">License No.</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="restriction">Restriction Code</string>
    <string name="old_code">Old Code</string>
    <string name="new_code">New Code</string>
    <string name="condition">Condition</string>
    <string name="license_classification">License Classification</string>
    <string name="license_pro">Professional</string>
    <string name="license_non_pro">Non-Professional</string>
    <string name="transmission_type">Transmission/Clutch:</string>
    <string name="reserve_brand_model">Brand / Model / Color</string>
    <string name="reserve_brand_model1">Brand / Model</string>
    <string name="reserve_seating">Seating Capacity</string>
    <string name="reserve_transmission">Transmission Type</string>
    <string name="reserve_location">Location</string>
    <string name="reserve_driving_mode">Driving Mode</string>
    <string name="reserve_drive_mode1">Drive by Owner</string>
    <string name="reserve_drive_mode2">Borrower Self Drive</string>
    <string name="vehicle_info">Vehicle Information</string>
    <string name="vehicle_brand">Brand</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_color">Color</string>
    <string name="seating_capacity">Maximum Passenger Capacity </string>
    <string name="vehicle_category">Vehicle Category</string>
    <string name="clutch_type">Vehicle Clutch Type</string>
    <string name="clutch1">Manual</string>
    <string name="clutch2">Automatic</string>
    <string name="clutch3">Semi Automatic</string>
    <string name="plate_number">Plate No.</string>
    <string name="registration_number">CR No.</string>
    <string name="register_date">Register Date</string>
    <string name="driving_mode">What mode of driving does you want in your vehicle?</string>
    <string name="drive_mode1">Drive by Owner</string>
    <string name="drive_mode2">Borrower Self Drive</string>
    <string name="drive_mode3">Allowed Both </string>
    <string name="code_rad_l1">L1</string>
    <string name="code_rad_l2">L2</string>
    <string name="code_rad_l3">L3</string>
    <string name="code_rad_l4">L4</string>
    <string name="code_rad_l5">L5</string>
    <string name="code_rad_l6">L6</string>
    <string name="code_rad_l7">L7</string>
    <string name="code_rad_m1">M1</string>
    <string name="code_rad_m2">M2</string>
    <string name="code_rad_m3">M3</string>
    <string name="code_rad_n1">N1</string>
    <string name="code_rad_n2">N2</string>
    <string name="code_rad_n3">N3</string>
    <string name="code_rad_o1">O1</string>
    <string name="code_rad_o2">O2</string>
    <string name="description1">Motorcycle</string>
    <string name="code_l1">Two-wheeled vehicle with a maximum design speed not exceeding 50 kph</string>
    <string name="code_l2">Three-wheeled vehicle with a maximum design speed not exceeding 50 kph</string>
    <string name="code_l3">Two-wheeled vehicle with a maximum design speed exceeding 50 kph</string>
    <string name="description2">Tricycle</string>
    <string name="code_l4">Motorcycle with sidecar with a maximum design speed not exceeding 50 kph</string>
    <string name="code_l5">Three-wheeled symmetrically arranged vehicles with a maximum design speed exceeding 50 kph</string>
    <string name="code_l6">Four-wheeled vehicles with unladen mass not more than 350 kg with a maximum design speed not exceeding 45 kph</string>
    <string name="code_l7">Four-wheeled vehicles with unladen mass not more than 550 kg with a maximum design speed not exceeding 45 kph</string>
    <string name="four_wheel">Four Wheel Vehicle</string>
    <string name="description3">Passenger Car</string>
    <string name="code_m1">Vehicles with fewer than eight seats and Gross Vehicle Weight (GVW) not exceeding 5000 kg.</string>
    <string name="description4">Passenger Van/Jeepney</string>
    <string name="code_m2">Passenger vehicles with more than eight seats and GVW of less than 5000 kg.</string>
    <string name="description7">Heavy Passenger Bus</string>
    <string name="code_m3">Vehicles with more than eight seats and a maximum GVW of more than 5000 kg.</string>
    <string name="description5">Light Commercial</string>
    <string name="code_n1">Vehicles used for the carriage of goods, with a maximum GVW not exceeding 3500 kg.</string>
    <string name="description6">Heavy Commercial</string>
    <string name="code_n2">Vehicles used for the carriage of goods, with maximum GVW exceeding 3500 kg but less than 12000 kg.</string>
    <string name="code_n3">Vehicles used for the carriage of goods, with maximum GVW exceeding 12000 kg.</string>
    <string name="description8">Light Articulated</string>
    <string name="code_o1">Articulated vehicles with GVW less than 750 kg</string>
    <string name="code_o2">Articulated vehicles with GVW not exceeding 3500 kg</string>
    <string name="rent_Cost">Rental Cost?</string>
    <string name="v1_Cost">550</string>
    <string name="v1_type">Scooter/Classic Bike</string>
    <string name="v2_Cost">1800</string>
    <string name="v2_type">Cruiser/Choppers</string>
    <string name="v3_Cost">2900</string>
    <string name="v3_type">Sports Bike</string>
    <string name="v4_Cost">1500</string>
    <string name="v4_type">4 Seater Sedan/Hatchback</string>
    <string name="v5_Cost">2000</string>
    <string name="v5_type">6~7 seater MPV/Minivan</string>
    <string name="v6_Cost">2500</string>
    <string name="v6_type">8 seater MPV/Minivan</string>
    <string name="v7_Cost">3000</string>
    <string name="v7_type">4~7 SUV/Crossover/Pickup seater</string>
    <string name="v8_Cost">3500</string>
    <string name="v8_type">More than 8 seater Van</string>
    <string name="id_info">Identification Supporting Document</string>
    <string name="document_info">Address Supporting Document</string>
    <string name="id_title">License ID if available / Any valid ID</string>
    <string name="doc_address">Any Billing Document with Complete Home Address Information</string>
    <string name="motion_title">Welcome \n to \n Trip Mo \n Car Rental!</string>
    <string name="motion_copyright">Rodney Estacion \n Batch: MD5P</string>
    <string name="hint_search">--BRAND/MODEL/LOCATION--</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Update Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_return_date">Return Date</string>
    <string name="hint_pickup_time">Pickup Time &amp; Return Time</string>
    <string name="btn_check_date">Check Available Date</string>
    <string name="btn_set_time">Set Pickup Time/Return Time</string>
    <string name="btn_check_cost">Check Booking Cost!</string>
    <string name="btn_accept_Cost">Cost Accepted! Book Now!</string>
    <string name="btn_book_now">Book Now!</string>
    <string name="borrower_information">Borrowed Vehicle Information</string>
    <string name="full_name">Owner Name</string>
    <string name="full_address">Owner Address</string>
    <string name="full_contact_number">Contact Number</string>
    <string name="full_date_reserve">Date of Reservation</string>
    <string name="full_time_reserve">Time of Pick-up/Return</string>
    <string name="full_vehicle_cost">Vehicle Rent Cost</string>
    <string name="full_additional_cost">Additional Cost/Driving cost</string>
    <string name="full_note">Note: Fuel cost, toll fee and other expenses are excluded</string>
    <string name="full_total_cost">Total Cost</string>
    <string name="reserve_information_owner">Vehicle Owner Information</string>
    <string name="reserve_information_borrower">Vehicle Borrower Information</string>
    <string name="reserve_information_license">License Information</string>
    <string name="reserve_information_vehicle">Vehicle Information</string>
    <string name="reserve_information_reservation">Reservation Information</string>
    <string name="reserve_name">Name</string>
    <string name="reserve_address">Address</string>
    <string name="reserve_contact_number">Contact Number</string>
    <string name="reserve_license_info">License No. / Validity</string>
    <string name="reserve_license_code">Restriction Code / Condition</string>
    <string name="reserve_vehicle_info">Brand / Model / Capacity</string>
    <string name="reserve_vehicle_capacity">Seating Capacity / Transmission</string>
    <string name="reserve_vehicle_registration">Plate No. / Registered Date</string>
    <string name="reserve_date_reserve">Date of Reservation</string>
    <string name="reserve_time_reserve">Time of Pick-up/Return</string>
    <string name="reserve_total_cost">Total Cost</string>
    <string name="reserve_button_confirm">Confirm Reservation</string>
    <string name="title_reservation">Pending Reservation</string>
    <string name="title_schedule">Reservation List</string>
</resources>