<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/navSchedule"
        android:icon="@drawable/baseline_schedule_24"
        android:title="@string/menu_schedule" />
    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/menu_profile"
        android:visible="false" />
    <item
        android:id="@+id/navLogout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/menu_logout" />
</menu>