<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radGrpVehicleCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radBtnL1"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_l1"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnL2"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_l2"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnL3"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_l3"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnL4"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_l4"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnL5"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_l5"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnL6"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_l6"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnL7"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_l7"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnM1"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_m1"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnM2"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_m2"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnN1"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_n1"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnN2"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_n2"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnN3"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_n3"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnM3"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_m3"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnO1"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_rad_o1"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/radBtnO2"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/code_rad_o2"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/description1"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_l1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_l2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_l3"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/description2"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_l4"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_l5"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_l6"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_l7"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/description3"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_m1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/description4"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_m2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/description5"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_n1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/description6"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_n2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_n3"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/description7"
                    android:textColor="@color/design_default_color_error"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/code_m3"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/description8"
                    android:textColor="@color/progress"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_o1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/code_o2"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>