<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.SupportingIdFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/id_info"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/id_title" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/imageID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/id_picture" />

                <ImageButton
                    android:id="@+id/imgBtnID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:minHeight="48dp"
                    android:src="@drawable/baseline_add_a_photo_24" />

            </FrameLayout>

            <Button
                android:id="@+id/btnNextProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/next" />

        </LinearLayout>


    </ScrollView>
</FrameLayout>